bootcamp-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: bootcamp-pod
  labels:
    app: bootcamp-pod-app
spec:
  containers:
    - name: bootcamp-pod-container
      image: gcr.io/google-samples/kubernetes-bootcamp:v1
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
      ports:
        - containerPort: 8080
