bootcamp-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: bootcamp-service
  labels:
    app: bootcamp-service-app
spec:
  selector:
    app: bootcamp-pod-app
  ports:
    - port: 8080
      targetPort: 8080
