service.yaml
kind: Service
apiVersion: v1
metadata:
  name: bootcamp-service
  labels:
    app: bootcamp-service
spec:
  selector:
    app: bootcamp-pod
  ports:
    - port: 8080
      targetPort: 8080
